# qdual

include/: ijkcoord.txx  ijkgrid.txx  ijkisopoly.txx  ijkmesh_geom.txx
src/qdual/: CMakeLists.txt  compareqdual.py  ijkcommand_line.txx  ijkdualtable.cxx  ijkdualtable_ambig.cxx  ijkgrid_macros.h  parse_testqdual_output.py  qdual.cxx  qdual.h  qdualCollapse.cxx  qdualCollapse.h  qdualIO.cxx  qdualIO.h  qdual_collapse.cxx  qdual_collapse.h  qdual_datastruct.cxx  qdual_datastruct.h  qdual_extract.cxx  qdual_extract.h  qdual_main.cxx  qdual_position.cxx  qdual_position.h  qdual_remove_degen.cxx  qdual_remove_degen.h  qdual_restrictions.cxx  qdual_restrictions.h  qdual_table.cxx  qdual_table.h  qdual_types.h  qdual_utilities.cxx  qdual_utilities.h  runqdual.py  test2qdual.py  testqdual.py  testqdual_multi_isov.py  testqdual_random_scalar.py
